--- a/Aethersailor_Clash.ini
+++ b/Aethersailor_Clash.ini
@@ -66,7 +66,7 @@ custom_proxy_group=🚀 节点选择`select`[]favorate`[]🇺🇸 美国节点`[
 custom_proxy_group=🚀 手动切换`select`[]favorate`[]🇺🇸 美国节点`[]ENGLISH`[]ASIA`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇹🇼 台湾节点`[]🇰🇷 韩国节点`[]🇨🇦 加拿大节点`[]🇬🇧 英国节点`[]🇫🇷 法国节点`[]🇩🇪 德国节点`[]🇳🇱 荷兰节点`[]🇹🇷 土耳其节点`[]🇻🇳 越南节点`[]♻️ 自动选择
 custom_proxy_group=♻️ 自动选择`url-test`.*`http://cp.cloudflare.com/generate_204`300,,50
 custom_proxy_group=🚀 GitHub`select`[]favorate`[]🇭🇰 香港节点`[]🇺🇸 美国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇹🇼 台湾节点`[]🇰🇷 韩国节点`[]🇨🇦 加拿大节点`[]🇬🇧 英国节点`[]🇫🇷 法国节点`[]🇩🇪 德国节点`[]🇳🇱 荷兰节点`[]🇹🇷 土耳其节点`[]🇻🇳 越南节点`[]🚀 节点选择`[]♻️ 自动选择`[]🚀 手动切换`[]🎯 全球直连
-custom_proxy_group=📲 Telegram`select`[]🇺🇸 美国节点`[]ENGLISH`[]ASIA`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇹🇼 台湾节点`[]🇰🇷 韩国节点`[]🇨🇦 加拿大节点`[]🇬🇧 英国节点`[]🇫🇷 法国节点`[]🇩🇪 德国节点`[]🇳🇱 荷兰节点`[]🇹🇷 土耳其节点`[]🇻🇳 越南节点`[]🚀 节点选择`[]♻️ 自动选择`[]🚀 手动切换`[]🎯 全球直连
+custom_proxy_group=📲 Telegram`select`[]favorate`[]🇺🇸 美国节点`[]ENGLISH`[]ASIA`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇹🇼 台湾节点`[]🇰🇷 韩国节点`[]🇨🇦 加拿大节点`[]🇬🇧 英国节点`[]🇫🇷 法国节点`[]🇩🇪 德国节点`[]🇳🇱 荷兰节点`[]🇹🇷 土耳其节点`[]🇻🇳 越南节点`[]🚀 节点选择`[]♻️ 自动选择`[]🚀 手动切换`[]🎯 全球直连
 custom_proxy_group=💬 ChatGPT`fallback`[]🇺🇸 美国节点`[]ENGLISH`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=Ⓜ️ Copilot`fallback`[]🇺🇸 美国节点`[]ENGLISH`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🎶 TikTok`select`[]ENGLISH`[]ASIA`[]🇺🇸 美国节点`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇹🇼 台湾节点`[]🇰🇷 韩国节点`[]🇨🇦 加拿大节点`[]🇬🇧 英国节点`[]🇫🇷 法国节点`[]🇩🇪 德国节点`[]🇳🇱 荷兰节点`[]🇹🇷 土耳其节点`[]🇻🇳 越南节点`[]🚀 节点选择`[]♻️ 自动选择`[]🚀 手动切换`.*`[]🎯 全球直连
@@ -101,7 +101,7 @@ custom_proxy_group=🇳🇱 荷兰节点`url-test`(荷兰|Netherlands)`http://cp
 custom_proxy_group=🇹🇷 土耳其节点`url-test`(土耳其|Turkey|Türkiye)`http://cp.cloudflare.com/generate_204`300,,50
 ;custom_proxy_group=🇮🇳 印度节点`url-test`(印度|India)`http://cp.cloudflare.com/generate_204`300,,50
 custom_proxy_group=🇻🇳 越南节点`url-test`(越南|Vietnam)`http://cp.cloudflare.com/generate_204`300,,50
-custom_proxy_group=AQ 南极洲`url-test`(南极洲|AQ)`http://cp.cloudflare.com/generate_204`300,,50
+;custom_proxy_group=AQ 南极洲`url-test`(南极洲|AQ)`http://cp.cloudflare.com/generate_204`300,,50
 
 
 
@@ -127,7 +127,7 @@ custom_proxy_group=AU`fallback`(澳大利亚|Australia|AU|australia)`http://www.
 ;custom_proxy_group=GM`url-test`(德国|German|Germany|german)`http://www.gstatic.com/generate_204`300,,50
 ;custom_proxy_group=FR`url-test`(法国|France|FR|france)`http://www.gstatic.com/generate_204`300,,50
 ;custom_proxy_group=INDO`url-test`(印度尼西亚|印尼|Indonesia)`http://www.gstatic.com/generate_204`300,,50
-;custom_proxy_group=THAI`url-test`(泰国|Thailand)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=THAI`url-test`(泰国|Thailand)`http://www.gstatic.com/generate_204`300,,50
 ;custom_proxy_group=VN`url-test`(越南|Vietnam)`http://www.gstatic.com/generate_204`300,,50
 ;custom_proxy_group=SG`url-test`(新加坡|坡|狮城|SG|Singapore)`http://www.gstatic.com/generate_204`300,,50
 ;custom_proxy_group=KOREA`url-test`(韩国|KOREA|korea)`http://www.gstatic.com/generate_204`300,,50
