--- a/Aethersailor_Clash.ini
+++ b/Aethersailor_Clash.ini
@@ -131,7 +131,7 @@ custom_proxy_group=THAI`url-test`(泰国|Thailand)`http://www.gstatic.com/genera
 ;custom_proxy_group=VN`url-test`(越南|Vietnam)`http://www.gstatic.com/generate_204`300,,50
 ;custom_proxy_group=SG`url-test`(新加坡|坡|狮城|SG|Singapore)`http://www.gstatic.com/generate_204`300,,50
 ;custom_proxy_group=KOREA`url-test`(韩国|KOREA|korea)`http://www.gstatic.com/generate_204`300,,50
-;custom_proxy_group=PHILIPPINES`url-test`(菲律宾|Philippines)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=PHILIPPINES`url-test`(菲律宾|Philippines)`http://www.gstatic.com/generate_204`300,,150
 ;custom_proxy_group=Pakistan`url-test`(巴基斯坦|Pakistan)`http://www.gstatic.com/generate_204`300,,50
 ;custom_proxy_group=Russia`url-test`(俄罗斯|Russia)`http://www.gstatic.com/generate_204`300,,50
 ;custom_proxy_group=Turkey`url-test`(土耳其|Turkey)`http://www.gstatic.com/generate_204`300,,50
