--- a/Aethersailor_Clash.ini
+++ b/Aethersailor_Clash.ini
@@ -2,12 +2,17 @@
 ;设置规则标志位
 
 
-ruleset=canada77777site,https://raw.githubusercontent.com/flyingrichard/richard/justinR/canada77777site.list
-ruleset=US77777site,https://raw.githubusercontent.com/flyingrichard/richard/justinR/US77777site.list
-ruleset=japan77777site,https://raw.githubusercontent.com/flyingrichard/richard/justinR/japan77777site.list
 ruleset=AI,https://raw.githubusercontent.com/flyingrichard/richard/justinR/AI.list
 ruleset=ChatGPT,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/OpenAI/OpenAI.list
 ruleset=Copilot,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Copilot/Copilot.list
+
+
+
+
+ruleset=canada77777site,https://raw.githubusercontent.com/flyingrichard/richard/justinR/canada77777site.list
+ruleset=US77777site,https://raw.githubusercontent.com/flyingrichard/richard/justinR/US77777site.list
+ruleset=japan77777site,https://raw.githubusercontent.com/flyingrichard/richard/justinR/japan77777site.list
+
 ruleset=ENGLISH,https://raw.githubusercontent.com/flyingrichard/richard/justinR/(AI)-ENGLISH-PROXY.list
 
 
@@ -107,9 +112,9 @@ custom_proxy_group=🇻🇳 越南节点`url-test`(越南|Vietnam)`http://cp.clo
 
 
 custom_proxy_group=favorate`url-test`[]ENGLISH`[]ASIA`http://www.gstatic.com/generate_204`300,,150
-custom_proxy_group=AI`url-test`[]🇺🇸 美国节点`[]ENGLISH`http://www.gstatic.com/generate_204`300,,150
-custom_proxy_group=ChatGPT`url-test`[]🇺🇸 美国节点`[]ENGLISH`http://www.gstatic.com/generate_204`300,,150
-custom_proxy_group=Copilot`url-test`[]🇺🇸 美国节点`[]ENGLISH`http://www.gstatic.com/generate_204`300,,150
+custom_proxy_group=AI`fallback`[]🇺🇸 美国节点`[]ENGLISH`http://www.gstatic.com/generate_204`300,,150
+custom_proxy_group=ChatGPT`fallback`[]🇺🇸 美国节点`[]ENGLISH`http://www.gstatic.com/generate_204`300,,150
+custom_proxy_group=Copilot`fallback`[]🇺🇸 美国节点`[]ENGLISH`http://www.gstatic.com/generate_204`300,,150
 custom_proxy_group=canada77777site`url-test`[]🇨🇦 加拿大节点`http://www.gstatic.com/generate_204`300,,150
 custom_proxy_group=US77777site`url-test`[]🇺🇸 美国节点`http://www.gstatic.com/generate_204`300,,150
 custom_proxy_group=japan77777site`url-test`[]🇯🇵 日本节点`http://www.gstatic.com/generate_204`300,,150
