--- a/Aethersailor_Clash.ini
+++ b/Aethersailor_Clash.ini
@@ -5,7 +5,8 @@
 ruleset=AI,https://raw.githubusercontent.com/flyingrichard/richard/justinR/AI.list
 ruleset=ChatGPT,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/OpenAI/OpenAI.list
 ruleset=Copilot,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Copilot/Copilot.list
-
+ruleset=💬 ChatGPT,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/OpenAI/OpenAI.list
+ruleset=Ⓜ️ Copilot,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Copilot/Copilot.list
 
 
 
@@ -32,8 +33,8 @@ ruleset=🎯 全球直连,https://raw.githubusercontent.com/blackmatrix7/ios_rul
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/Aethersailor/Custom_OpenClash_Rules/main/rule/Steam_CDN.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/PrivateTracker/PrivateTracker.list
 ruleset=📲 Telegram,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Telegram/Telegram.list
-ruleset=💬 ChatGPT,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/OpenAI/OpenAI.list
-ruleset=Ⓜ️ Copilot,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Copilot/Copilot.list
+;ruleset=💬 ChatGPT,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/OpenAI/OpenAI.list
+;ruleset=Ⓜ️ Copilot,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Copilot/Copilot.list
 ruleset=🚀 GitHub,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/GitHub/GitHub.list
 ruleset=🍎 苹果服务,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Apple/Apple.list
 ruleset=Ⓜ️ 微软服务,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Microsoft/Microsoft.list
@@ -142,8 +143,8 @@ custom_proxy_group=PHILIPPINES`url-test`(菲律宾|Philippines)`http://www.gstat
 ;custom_proxy_group=Turkey`url-test`(土耳其|Turkey)`http://www.gstatic.com/generate_204`300,,50
 
 custom_proxy_group=ENGLISH`url-test`[]🇺🇸 美国节点`[]AU`[]🇨🇦 加拿大节点`[]🇬🇧 英国节点`http://www.gstatic.com/generate_204`300,,150
-custom_proxy_group=ASIA`url-test`[]🇹🇼 台湾节点`[]PHILIPPINES`[]MO`[]🇭🇰 香港节点`[]🇻🇳 越南节点`[]THAI`[]MALAYSIA`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]INDO`[]🇰🇷 韩国节点`[]🇮🇳 印度节点`http://www.gstatic.com/generate_204`300,,150
-;custom_proxy_group=ASIA`url-test`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇹🇼 台湾节点`[]🇰🇷 韩国节点`[]MO Macau`http://www.gstatic.com/generate_204`300,,150
+;custom_proxy_group=ASIA`url-test`[]🇹🇼 台湾节点`[]PHILIPPINES`[]MO`[]🇭🇰 香港节点`[]🇻🇳 越南节点`[]THAI`[]MALAYSIA`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]INDO`[]🇰🇷 韩国节点`[]🇮🇳 印度节点`http://www.gstatic.com/generate_204`300,,150
+custom_proxy_group=ASIA`url-test`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇹🇼 台湾节点`[]🇰🇷 韩国节点`[]MO Macau`http://www.gstatic.com/generate_204`300,,150
 ;custom_proxy_group=country`select`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]TW`[]INDO`[]THAI`[]VN`[]SG`[]KOREA`[]PHILIPPINES`[]Pakistan`[]Russia`[]Turkey`[]🇺🇲 美国节点`[]AU`[]CA`[]BR`[]FR`[]GM`[]DIRECT
 
 
