--- a/Aethersailor_Clash.ini
+++ b/Aethersailor_Clash.ini
@@ -113,9 +113,9 @@ custom_proxy_group=🇻🇳 越南节点`url-test`(越南|Vietnam)`http://cp.clo
 
 
 custom_proxy_group=favorate`url-test`[]ENGLISH`[]ASIA`http://www.gstatic.com/generate_204`300,,150
-custom_proxy_group=AI`fallback`[]🇺🇸 美国节点`[]ENGLISH`http://www.gstatic.com/generate_204`300,,150
-custom_proxy_group=ChatGPT`fallback`[]🇺🇸 美国节点`[]ENGLISH`http://www.gstatic.com/generate_204`300,,150
-custom_proxy_group=Copilot`fallback`[]🇺🇸 美国节点`[]ENGLISH`http://www.gstatic.com/generate_204`300,,150
+custom_proxy_group=AI`fallback`(美|日本|澳大利亚|德国|法国|英国|新加坡|加拿大|美国|US|United States)`http://www.gstatic.com/generate_204`300,,150
+custom_proxy_group=ChatGPT`fallback`(美|日本|澳大利亚|德国|法国|英国|新加坡|加拿大|美国|US|United States)`http://www.gstatic.com/generate_204`300,,150
+custom_proxy_group=Copilot`fallback`(美|日本|澳大利亚|德国|法国|英国|新加坡|加拿大|美国|US|United States)`http://www.gstatic.com/generate_204`300,,150
 custom_proxy_group=canada77777site`url-test`[]🇨🇦 加拿大节点`http://www.gstatic.com/generate_204`300,,150
 custom_proxy_group=US77777site`url-test`[]🇺🇸 美国节点`http://www.gstatic.com/generate_204`300,,150
 custom_proxy_group=japan77777site`url-test`[]🇯🇵 日本节点`http://www.gstatic.com/generate_204`300,,150
