--- a/Aethersailor_Clash.ini
+++ b/Aethersailor_Clash.ini
@@ -73,8 +73,8 @@ custom_proxy_group=🚀 手动切换`select`[]favorate`[]🇺🇸 美国节点`[
 custom_proxy_group=♻️ 自动选择`url-test`.*`http://cp.cloudflare.com/generate_204`300,,50
 custom_proxy_group=🚀 GitHub`select`[]favorate`[]🇭🇰 香港节点`[]🇺🇸 美国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇹🇼 台湾节点`[]🇰🇷 韩国节点`[]🇨🇦 加拿大节点`[]🇬🇧 英国节点`[]🇫🇷 法国节点`[]🇩🇪 德国节点`[]🇳🇱 荷兰节点`[]🇹🇷 土耳其节点`[]🇻🇳 越南节点`[]🚀 节点选择`[]♻️ 自动选择`[]🚀 手动切换`[]🎯 全球直连
 custom_proxy_group=📲 Telegram`select`[]favorate`[]🇺🇸 美国节点`[]ENGLISH`[]ASIA`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇹🇼 台湾节点`[]🇰🇷 韩国节点`[]🇨🇦 加拿大节点`[]🇬🇧 英国节点`[]🇫🇷 法国节点`[]🇩🇪 德国节点`[]🇳🇱 荷兰节点`[]🇹🇷 土耳其节点`[]🇻🇳 越南节点`[]🚀 节点选择`[]♻️ 自动选择`[]🚀 手动切换`[]🎯 全球直连
-custom_proxy_group=💬 ChatGPT`fallback`(美|日本|澳大利亚|德国|法国|英国|新加坡|加拿大|美国|US|United States)`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=Ⓜ️ Copilot`fallback`(美|日本|澳大利亚|德国|法国|英国|新加坡|加拿大|美国|US|United States)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=💬 ChatGPT`fallback`(美|美国|US|United States|日本|澳大利亚|德国|法国|英国|新加坡|加拿大)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=Ⓜ️ Copilot`fallback`(美|美国|US|United States|日本|澳大利亚|德国|法国|英国|新加坡|加拿大)`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🎶 TikTok`select`[]ENGLISH`[]ASIA`[]🇺🇸 美国节点`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇹🇼 台湾节点`[]🇰🇷 韩国节点`[]🇨🇦 加拿大节点`[]🇬🇧 英国节点`[]🇫🇷 法国节点`[]🇩🇪 德国节点`[]🇳🇱 荷兰节点`[]🇹🇷 土耳其节点`[]🇻🇳 越南节点`[]🚀 节点选择`[]♻️ 自动选择`[]🚀 手动切换`[]🎯 全球直连
 custom_proxy_group=📹 YouTube`select`[]ENGLISH`[]ASIA`[]🇺🇸 美国节点
 custom_proxy_group=🎥 Netflix`select`[]🇺🇸 美国节点`[]ENGLISH`[]ASIA
@@ -113,9 +113,9 @@ custom_proxy_group=🇻🇳 越南节点`url-test`(越南|Vietnam)`http://cp.clo
 
 
 custom_proxy_group=favorate`url-test`[]ENGLISH`[]ASIA`http://www.gstatic.com/generate_204`300,,150
-custom_proxy_group=AI`fallback`(美|日本|澳大利亚|德国|法国|英国|新加坡|加拿大|美国|US|United States)`http://www.gstatic.com/generate_204`300,,150
-custom_proxy_group=ChatGPT`fallback`(美|日本|澳大利亚|德国|法国|英国|新加坡|加拿大|美国|US|United States)`http://www.gstatic.com/generate_204`300,,150
-custom_proxy_group=Copilot`fallback`(美|日本|澳大利亚|德国|法国|英国|新加坡|加拿大|美国|US|United States)`http://www.gstatic.com/generate_204`300,,150
+custom_proxy_group=AI`fallback`(美|美国|US|United States|日本|澳大利亚|德国|法国|英国|新加坡|加拿大)`http://www.gstatic.com/generate_204`300,,150
+custom_proxy_group=ChatGPT`fallback`(美|美国|US|United States|日本|澳大利亚|德国|法国|英国|新加坡|加拿大)`http://www.gstatic.com/generate_204`300,,150
+custom_proxy_group=Copilot`fallback`(美|美国|US|United States|日本|澳大利亚|德国|法国|英国|新加坡|加拿大)`http://www.gstatic.com/generate_204`300,,150
 custom_proxy_group=canada77777site`url-test`[]🇨🇦 加拿大节点`http://www.gstatic.com/generate_204`300,,150
 custom_proxy_group=US77777site`url-test`[]🇺🇸 美国节点`http://www.gstatic.com/generate_204`300,,150
 custom_proxy_group=japan77777site`url-test`[]🇯🇵 日本节点`http://www.gstatic.com/generate_204`300,,150
