--- a/JR_Online_MultiCountry.ini
+++ b/JR_Online_MultiCountry.ini
@@ -19,6 +19,7 @@ ruleset=ChatGPT,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/m
 ruleset=Copilot,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Copilot/Copilot.list
 ruleset=ENGLISH,https://raw.githubusercontent.com/flyingrichard/richard/justinR/(AI)-ENGLISH-PROXY.list
 
+ruleset=🎯 全球直连,https://raw.githubusercontent.com/flyingrichard/richard/refs/heads/justinR/chinadirect.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/LocalAreaNetwork.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/UnBan.list
 ruleset=🛑 全球拦截,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanAD.list
