--- a/FullMode_clash.ini
+++ b/FullMode_clash.ini
@@ -10,6 +10,19 @@
 ;增强国外GFW：支持
 
 ;设置规则标志位
+
+ruleset=canada77777site,https://raw.githubusercontent.com/flyingrichard/richard/justinR/canada77777site.list
+ruleset=US77777site,https://raw.githubusercontent.com/flyingrichard/richard/justinR/US77777site.list
+ruleset=japan77777site,https://raw.githubusercontent.com/flyingrichard/richard/justinR/japan77777site.list
+ruleset=AI,https://raw.githubusercontent.com/flyingrichard/richard/justinR/AI.list
+ruleset=ChatGPT,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/OpenAI/OpenAI.list
+ruleset=Copilot,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Copilot/Copilot.list
+ruleset=ENGLISH,https://raw.githubusercontent.com/flyingrichard/richard/justinR/(AI)-ENGLISH-PROXY.list
+
+
+
+
+
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/LocalAreaNetwork.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/UnBan.list
 ruleset=🛑 广告拦截,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanAD.list
